--- a/unity-renderer/Assets/WebGLTemplates/decentraland/index.html
+++ b/unity-renderer/Assets/WebGLTemplates/decentraland/index.html
@@ -19,7 +19,7 @@
     </style>
     <script src="%UNITY_WEBGL_LOADER_URL%"></script>
     <script>
-      window.startDecentraland = function() {
+      window.startBeland = function() {
         var gamejs = document.createElement("script");
         gamejs.type = "text/javascript";
         gamejs.src = "game.js";
@@ -35,8 +35,8 @@
       );
 
       window.BLD = {
-        StartDecentraland() {
-          console.log("StartDecentraland called");
+        StartBeland() {
+          console.log("StartBeland called");
         },
         MessageFromEngine(type, message) {
           console.log("MessageFromEngine(" + type + ")", message);
@@ -125,7 +125,7 @@
 
           gameInstance.SendMessage(
             "SceneController",
-            "LoadDecentralandScenes",
+            "LoadBelandScenes",
             JSON.stringify(sceneJSON)
           );
         }
